<resources>
    <string name="app_name" translatable="false">ViMoney</string>
    <string name="default_font" translatable="false">sans-serif-medium</string>

    <!--Splash-->
    <string name="splash_nonetwork_string">No network detected.\ncan\'t download sample data</string>
    <string name="splash_nonetwork_negative">Exit</string>
    <string name="splash_nonetwork_positive">REPEAT</string>
    <string name="splash_logo_description" translatable="false">Logo</string>

    <!--Home Activity-->
    <string name="home_title_acc_name">Visa</string>
    <string name="home_title_acc_type">debit</string>
    <string name="home_title_acc_balance">10000</string>
    <string name="home_stat_income_icon">home_stat_income_icon</string>
    <string name="home_stat_spending_icon">home_stat_spending_icon</string>
    <string name="home_accounts_title">Accounts</string>
    <string name="home_fragment_stat_month_sample">September</string>
    <string name="home_fragment_income_title">Income</string>
    <string name="home_fragment_income">0</string>
    <string name="home_fragment_income_sample">20000</string>
    <string name="home_fragment_spending">0</string>
    <string name="home_fragment_spending_sample">11000</string>
    <string name="home_fragment_spending_title">Expenses</string>
    <string name="home_fragment_link_to_all_title">show all</string>

    <!--History Activity-->
    <string name="history_title_home">Records</string>
    <string name="history_category_image_desc">history_category_image</string>

    <!--Dashboard Activity-->
    <string name="dashboard_title_home">Statistics</string>

    <!--Notification Activity-->
    <string name="notification_title_home">Notifications</string>
    <string name="notification_notify_btn_text">Notify</string>
    <string name="notification_sample_title_text">Hey?!</string>
    <string name="notification_sample_body_text">There are not records today</string>
    <string name="notification_save_title_text">Saved</string>
    <string name="notification_save_error_title_text">Error</string>
    <string name="notification_save_body_text">Successfully exported</string>

    <!--Add/Transaction Activity-->
    <string name="add_title_home_spent">Expense</string>
    <string name="add_title_home_income">Income</string>
    <string name="add_title_home_transfer">Transfer</string>
    <string name="add_title_home_debt">Debt</string>
    <string name="add_btn_save">Save</string>
    <string name="add_btn_update">Update</string>
    <string name="add_spent_btn_text">expense</string>
    <string name="add_income_btn_text">income</string>
    <string name="add_no_account_text">choose account</string>
    <string name="add_no_category_text">choose category</string>
    <string name="transaction_add_alert_question">Close without saving?</string>
    <string name="transaction_add_alert_negative">Exit</string>
    <string name="transaction_add_alert_positive">Close</string>
    <string name="transaction_delete_alert_question">Are you sure want to delete?</string>
    <string name="transaction_delete_alert_negative">Keep</string>
    <string name="transaction_delete_alert_positive">Delete</string>
    <string name="add_transaction_button_desc">add transaction button</string>
    <string name="transaction_import_sample_desc">sample</string>
    <string name="add_desc_sample">comment</string>
    <string name="add_sum_sample">0.0</string>
    <string name="add_sum_filter_sample">sum from</string>
    <string name="add_date_sample_txt">12/11/2018</string>

    <!--Settings Activity-->
    <string name="settings_title_home">Settings</string>

    <!--Login Fragment-->
    <string name="login_title_home">Pin setup</string>
    <string name="login_delete_text" translatable="false"><![CDATA[<]]></string>

    <!--Add Check Activity-->
    <string name="add_check_title_home">Add account</string>
    <string name="add_check_type_cash_txt">cash</string>
    <string name="add_check_type_debit_txt">debit</string>
    <string name="add_check_type_credit_txt">credit</string>
    <string name="add_check_name_hint">name</string>
    <string name="add_check_no_account_warning">Please, choose account</string>
    <string name="add_check_no_sum_warning">Please, set the amount</string>
    <string name="add_check_all_balance_need">balance include</string>
    <string name="add_check_show_main_need">show on main</string>
    <string name="check_delete_alert_question">Are you sure want to delete?</string>
    <string name="check_delete_alert_negative">Keep</string>
    <string name="check_delete_alert_positive">Delete</string>
    <string name="check_add_alert_question">Close without saving?</string>
    <string name="check_add_alert_no_data">Fill the form</string>
    <string name="check_add_alert_negative">Exit</string>
    <string name="check_add_alert_positive">Close</string>
    <string name="check_add_alert_color_header">Choose a color</string>
    <string name="check_add_alert_color_positive">Ok</string>
    <string name="check_add_alert_color_negative">Cancel</string>
    <string name="settings_check_title_home">Accounts list</string>

    <!--Check Activity-->
    <string name="check_title_home">Account</string>
    <string name="check_nav_title_edit">edit_account</string>
    <string name="check_arсhive_txt">Archive</string>

    <!--Navigation-->
    <string name="nav_title_notification">Notifications</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_add">Add record</string>

    <!--Sys-->
    <string name="channel_name" translatable="false">reminder</string>
    <string name="channel_description">Don\'t forget to record you expenses</string>
    <string name="back_icon_description">Back</string>
    <string name="filter_icon_description">Filter</string>
    <string name="settings_security_switch_text">Use Pin lock</string>
    <string name="settings_categories_btn">Manage Categories</string>
    <string name="settings_save_transactions_btn">Save records</string>
    <string name="settings_load_transactions_btn">Load records</string>

    <!--Currency-->
    <string name="currency_name">currency</string>
    <string name="currency_name_ruble">rubble</string>
    <string name="currency_ruble_symbol" translatable="false">\u20BD</string>
    <string name="currency_name_dollar">dollar</string>
    <string name="currency_name_euro">auro</string>
    <string name="currency_name_yuan">yuan</string>
    <string name="color_string">color</string>
    <string name="dashboard_prev"><![CDATA[<<]]></string>
    <string name="dashboard_next"><![CDATA[>>]]></string>

    <!--Categories-->
    <string name="sample_category_android" translatable="false">\uf544</string>
    <string name="sample_category_name">unknown</string>
    <string name="category_unknown" translatable="false">\?</string>
    <string name="categories_title_home">Categories</string>
    <string name="category_add_title">Add category</string>
    <string name="category_name">Category</string>
    <string name="categories_symbols_list_tip_string">You can manage categories in settings</string>

    <string name="filter_dialog_button">Filter</string>

</resources>
