<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    >

    <!--Статистика доходов-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/home_stat_income"
            android:layout_width="@dimen/icon_st_size"
            android:layout_height="@dimen/icon_st_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_upward_black"
            android:contentDescription="@string/home_stat_income_icon"
            />

        <TextView
            android:id="@+id/home_stat_income_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_stat_income"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/home_fragment_income_title"
            style="@style/textSub"
            />

        <TextView
            android:id="@+id/home_stat_income_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_stat_income_string"
            app:layout_constraintStart_toStartOf="@id/home_stat_income_string"
            app:layout_constraintEnd_toEndOf="@id/home_stat_income_string"
            android:text="@string/home_fragment_income"
            style="@style/textHeader2"
            tools:text="@string/home_fragment_income_sample"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Статистика расходов-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/home_stat_spending"
            android:layout_width="@dimen/icon_st_size"
            android:layout_height="@dimen/icon_st_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_downward_black"
            android:contentDescription="@string/home_stat_spending_icon"
            />

        <TextView
            android:id="@+id/home_stat_spending_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_stat_spending"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/home_fragment_spending_title"
            style="@style/textSub"
            />

        <TextView
            android:id="@+id/home_stat_expense_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_stat_spending_string"
            app:layout_constraintStart_toStartOf="@id/home_stat_spending_string"
            app:layout_constraintEnd_toEndOf="@id/home_stat_spending_string"
            android:text="@string/home_fragment_spending"
            style="@style/textHeader2"
            tools:text="@string/home_fragment_spending_sample"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
