<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/st_padding"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    >

    <!--Статистика доходов-->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/home_stat_income"
            android:layout_width="@dimen/icon_st_size"
            android:layout_height="@dimen/icon_st_size"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_arrow_upward_black"
            android:contentDescription="@string/home_stat_income_icon"
            />

        <TextView
            android:id="@+id/home_stat_income_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/home_stat_income"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/st_padding"
            android:paddingEnd="@dimen/st_padding"
            android:text="@string/home_fragment_income_title"
            />

        <TextView
            android:id="@+id/home_stat_income_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_stat_income_string"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/home_stat_income"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/st_padding"
            android:paddingEnd="@dimen/st_padding"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/home_fragment_income"
            tools:text="@string/home_fragment_income_sample"
            />

    </RelativeLayout>

    <!--Статистика расходов-->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/home_stat_spending"
            android:layout_width="@dimen/icon_st_size"
            android:layout_height="@dimen/icon_st_size"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_arrow_downward_black"
            android:contentDescription="@string/home_stat_spending_icon"
            />

        <TextView
            android:id="@+id/home_stat_spending_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/home_stat_spending"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/st_padding"
            android:paddingEnd="@dimen/st_padding"
            android:text="@string/home_fragment_spending_title"
            />

        <TextView
            android:id="@+id/home_stat_expense_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_stat_spending_string"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/home_stat_spending"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/st_padding"
            android:paddingEnd="@dimen/st_padding"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/home_fragment_spending"
            tools:text="@string/home_fragment_spending_sample"
            />


    </RelativeLayout>

</LinearLayout>