<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    tools:background="@color/colorBackgroundDark"
    >

    <EditText
        android:id="@+id/add_check_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/big_padding"
        android:hint="@string/add_check_name_hint"
        android:textColorHint="@color/colorSecondaryTextDark"
        android:inputType="text"
        android:textColor="@color/colorPrimaryTextDark"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/text_big_numbers"
        android:textStyle="bold"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_padding"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <RadioButton
            android:id="@+id/add_check_type_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryTextDark"
            android:fontFamily="sans-serif-medium"
            android:text="@string/add_check_type_cash_txt"
            />

        <RadioButton
            android:id="@+id/add_check_type_debit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_check_type_debit_txt"
            android:textColor="@color/colorPrimaryTextDark"
            android:fontFamily="sans-serif-medium"
            />

        <RadioButton
            android:id="@+id/add_check_type_credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_check_type_credit_txt"
            android:textColor="@color/colorPrimaryTextDark"
            android:fontFamily="sans-serif-medium"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_padding"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/currency_name"
            android:textColor="@color/colorSecondaryTextDark"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_st_numbers"
            />

        <TextView
            android:id="@+id/add_check_currency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:textSize="@dimen/text_st_numbers"
            android:layout_marginEnd="@dimen/big_padding"
            android:layout_marginStart="@dimen/big_padding"
            android:textColor="@color/colorPrimaryTextDark"
            android:fontFamily="sans-serif-medium"
            tools:text="@string/currency_ruble_symbol"
            />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/add_check_all_balance_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_padding"
        android:layout_marginEnd="@dimen/sm_padding"
        android:textColor="@color/colorSecondaryTextDark"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/text_st_numbers"
        android:text="@string/add_check_all_balance_need"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/add_check_show_main_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_padding"
        android:layout_marginEnd="@dimen/sm_padding"
        android:textColor="@color/colorSecondaryTextDark"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/text_st_numbers"
        android:text="@string/add_check_show_main_need"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_padding"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/color_string"
            android:textSize="@dimen/text_st_numbers"
            android:textColor="@color/colorSecondaryTextDark"
            android:fontFamily="sans-serif-medium"
            />

        <View
            android:id="@+id/add_check_color_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_view_height"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            />

    </LinearLayout>

    <Button
        android:id="@+id/add_check_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/sm_padding"
        android:text="@string/add_btn_save"
        android:textAllCaps="true"
        android:backgroundTint="@color/colorSecondaryDark"
        />

</LinearLayout>
