<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Заголовок транзакции-->
    <EditText
        android:id="@+id/add_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/big_padding"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_big_numbers"
        android:textStyle="bold"
        tools:text="@string/home_title_acc_balance" />

    <!--блок счета-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/big_padding"
        android:paddingEnd="@dimen/big_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_account_dark" />

        <EditText
            android:id="@+id/add_acc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_st_numbers"
            tools:text="@string/home_title_acc_name" />

    </LinearLayout>

    <!--блок комментария-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/big_padding"
        android:paddingEnd="@dimen/big_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_comment_dark" />

        <EditText
            android:id="@+id/add_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_st_numbers"
            tools:text="@string/add_desc_sample" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_date_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/big_padding"
        android:paddingEnd="@dimen/big_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_calendar_dark" />

        <TextView
            android:id="@+id/add_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/big_padding"
            tools:text="@string/add_date_sample_txt" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/big_padding"
        android:paddingEnd="@dimen/big_padding"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/add_spent_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/add_spent_btn_text" />

        <RadioButton
            android:id="@+id/add_income_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_income_btn_text" />

    </RadioGroup>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_btn_save" />

</LinearLayout>
