<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--карта-->
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_view_width"
        android:layout_height="@dimen/card_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/big_padding"
        app:cardCornerRadius="16dp"
        app:cardElevation="@dimen/sm_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_gradient">

            <TextView
                android:id="@+id/check_acc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTextWhite"
                tools:text="@string/home_title_acc_name" />

            <TextView
                android:id="@+id/check_acc_archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_below="@id/check_acc_name"
                android:textColor="@color/colorTextSecondary"
                android:visibility="invisible"
                tools:text="@string/check_arсhive_txt" />

            <TextView
                android:id="@+id/check_acc_type"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextSecondary"
                tools:text="@string/home_title_acc_type" />

            <TextView
                android:id="@+id/check_acc_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/text_big_numbers"
                android:textStyle="bold"
                tools:text="@string/home_title_acc_balance" />

            <TextView
                android:id="@+id/check_acc_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/check_acc_balance"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/sm_padding"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/text_big_numbers"
                android:textStyle="bold"
                tools:text="@string/currency_ruble_symbol" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--Заголовок транзакций-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/big_padding"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/history_title_home"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_st_numbers"
        android:textStyle="bold" />

    <!--Список транзаций-->
    <FrameLayout
        android:id="@+id/check_history_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
